nova/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  name: nova
  namespace: openstack
spec:
  tls:
    - hosts:
        - "nova.ctl1-humanz.cloud"
        - "vnc.ctl1-humanz.cloud"
      secretName: osh-wildcard
  ingressClassName: nginx
  rules:
  - host: nova.ctl1-humanz.cloud
    http:
      paths:
      - backend:
          service:
            name: nova-api
            port:
              name: n-api
        path: /
        pathType: Prefix
  - host: vnc.ctl1-humanz.cloud
    http:
      paths:
      - backend:
          service:
            name: nova-novncproxy
            port:
              name: n-novnc
        path: /
        pathType: Prefix
